<resources>
	<string name="app_name">Shopping List Manager</string>

	<string name="menu_search">Find Products</string>
	<string name="menu_lists">Lists</string>
	<string name="menu_shop">Shop for Lists</string>
	<string name="menu_settings">Settings</string>

	<string name="login">Log In</string>
	<string name="login_desc">Log in to start creating a shopping list.</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="reset_password">Forgotten your password?</string>
	<string name="no_account">Create an account instead.</string>
	<string name="register">Register</string>
	<string name="register_desc">Create an account to get started.</string>
	<string name="confirm_password">Confirm password</string>

	<string name="search">Search</string>
	<string name="search_go">Go!</string>

	<string name="available_at">Available At</string>
	<string name="sort_by">Sort By</string>

	<string name="shop_tesco">Tesco</string>
	<string name="shop_asda">Asda</string>
	<string name="shop_sainsburys">Sainsbury\'s</string>
	<string name="shop_ms">Marks &amp; Spencer</string>
	<string name="shop_iceland">Iceland</string>

	<string name="sort_price">Price</string>
	<string name="sort_relevance">Relevance</string>
	<string name="sort_rating">Rating</string>
	<string name="sort_amount">Amount</string>
	<string name="sort_alpha">Alphabetical</string>

	<string name="status_private">Not Shared</string>
	<string name="status_shared">Shared</string>
	<string name="status_ready_to_shop">Ready to Shop</string>

	<string name="my_lists">My Lists</string>
	<string name="shared_lists">Shared With Me</string>
	<string name="create_list">Create new shopping list</string>

	<string name="share_list">Share</string>
	<string name="delete_list">Delete</string>
	<string name="edit_list_items">Edit Items</string>
	<string name="ready_list">Ready for Shopping</string>
	<string name="list_details_subtitle">View all shopping lists</string>
	<string name="add_to_list">Add to List</string>
	<string name="find_someone_else">Find Someone Else</string>

	<string name="logout">Log Out</string>
	<string name="product_unavailable">Unavailable</string>
	<string name="save">Save</string>
	<string name="known_users">Known Users</string>
	<string name="item_amount">x%1$d</string>
	<string name="removed"><i>Removed</i></string>
	<string name="add_more_items">Find Products</string>
	<string name="search_for_products">Search for Product</string>
</resources>