<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.MainActivity">

	<Button
		android:id="@+id/btn_find"
		style="@style/Button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:text="@string/menu_search"
		app:icon="@android:drawable/ic_menu_search"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />

	<Button
		android:id="@+id/btn_lists"
		style="@style/Button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/menu_lists"
		app:icon="@android:drawable/ic_menu_sort_by_size"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btn_find" />

	<Button
		android:id="@+id/btn_settings"
		style="@style/Button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/menu_settings"
		app:icon="@android:drawable/ic_menu_manage"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btn_lists" />

	<TextView
		android:id="@+id/tv_main_title"
		style="@style/Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>