<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.user.LoginActivity">

	<TextView
		android:id="@+id/tv_login_title"
		style="@style/Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tv_login_desc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/login_desc"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

	<EditText
		android:id="@+id/et_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/username"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_username" />

	<EditText
		android:id="@+id/et_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_password" />

	<TextView
		android:id="@+id/tv_username"
		style="@style/Label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:text="@string/username"
		app:layout_constraintTop_toBottomOf="@+id/tv_no_account"
		tools:layout_editor_absoluteX="0dp" />

	<TextView
		android:id="@+id/tv_password"
		style="@style/Label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/password"
		app:layout_constraintTop_toBottomOf="@+id/et_username"
		tools:layout_editor_absoluteX="16dp" />

	<Button
		android:id="@+id/btn_login"
		style="@style/Button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/tv_reset_password"
		style="@style/Label"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/reset_password"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/et_password" />

	<TextView
		android:id="@+id/tv_no_account"
		style="@style/Label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/no_account"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_login_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>