<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.user.RegisterActivity">

	<Button
		android:id="@+id/btn_register"
		style="@style/Button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/register"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/tv_new_password"
		style="@style/Label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/password"
		app:layout_constraintTop_toBottomOf="@+id/et_new_username"
		tools:layout_editor_absoluteX="-16dp" />

	<TextView
		android:id="@+id/tv_confirm_new_password"
		style="@style/Label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/confirm_password"
		app:layout_constraintTop_toBottomOf="@+id/et_new_password"
		tools:layout_editor_absoluteX="0dp" />

	<EditText
		android:id="@+id/et_new_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/username"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_new_username" />

	<EditText
		android:id="@+id/et_new_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_new_password" />

	<EditText
		android:id="@+id/et_confirm_new_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/confirm_password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_confirm_new_password" />

	<TextView
		android:id="@+id/tv_new_username"
		style="@style/Label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:text="@string/username"
		app:layout_constraintTop_toBottomOf="@+id/tv_register_desc"
		tools:layout_editor_absoluteX="-78dp" />

	<TextView
		android:id="@+id/tv_register_desc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/register_desc"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

	<TextView
		android:id="@+id/tv_register_title"
		style="@style/Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>